force-app/main/default/objects/MEDA_Approval__c/MEDA_Approval__c.object-meta.xml
<CustomObject>
    <label>MEDA Approval</label>
    <nameField>
        <displayFormat>MEDA-{YY}{MM}{DD}{00}</displayFormat>
        <label>MEDA No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MEDA Approval</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>