force-app/main/default/objects/MEDA_Approval__c/fields/CED_Note__c.field-meta.xml
<CustomField>
    <fullName>CED_Note__c</fullName>
    <label>CED Note</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>