force-app/main/default/objects/MEDA_Approval__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fit for Air Travel with Medical Escort(s) Only</fullName>
            </value>
            <value>
                <fullName>Fit for Air Travel with Non-Medical Escort(s)/Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>