force-app/main/default/objects/MEDA_Approval__c/fields/Note_for_EHD__c.field-meta.xml
<CustomField>
    <fullName>Note_for_EHD__c</fullName>
    <label>RMS Note for EHD</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>