force-app/main/default/objects/MEDA_Approval__c/fields/Note_for_RMS__c.field-meta.xml
<CustomField>
    <fullName>Note_for_RMS__c</fullName>
    <label>EHD Note</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>