force-app/main/default/objects/MEDA_Approval__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <label>Passenger Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>