force-app/main/default/objects/MEDA_Approval__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <label>PNR</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>