force-app/main/default/objects/MEDA_Approval__c/fields/PSP_Note__c.field-meta.xml
<CustomField>
    <fullName>PSP_Note__c</fullName>
    <label>PSP Note</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>