force-app/main/default/objects/MEDA_Approval__c/fields/RMS_Note__c.field-meta.xml
<CustomField>
    <fullName>RMS_Note__c</fullName>
    <label>RMS Note For CED</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>