force-app/main/default/objects/MEDA_Approval__c/fields/RMS_Note_For_PSP__c.field-meta.xml
<CustomField>
    <fullName>RMS_Note_For_PSP__c</fullName>
    <label>RMS Note For PSP</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>