force-app/main/default/objects/MEDA_Approval__c/fields/Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>Ticket_No__c</fullName>
    <label>Ticket No.</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>