force-app/main/default/objects/MEDA_Approval__c/fields/Type_of_MEDA_Mutiple__c.field-meta.xml
<CustomField>
    <fullName>Type_of_MEDA_Mutiple__c</fullName>
    <label>Type of MEDA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AOXY</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>PPOC &amp; MEQT</fullName>
            </value>
            <value>
                <fullName>Pregnancy</fullName>
            </value>
            <value>
                <fullName>STCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>