force-app/main/default/objects/MEDA_Approval__c/fields/X1st_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Flight_Date__c</fullName>
    <label>1st Flight Date</label>
    <type>Date</type>
</CustomField>