force-app/main/default/objects/MEDA_Approval__c/fields/X1st_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>X1st_Flight_No__c</fullName>
    <label>1st Flight No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>