force-app/main/default/objects/MEDA_Approval__c/fields/X2nd_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Flight_Date__c</fullName>
    <label>2nd Flight Date</label>
    <type>Date</type>
</CustomField>