force-app/main/default/objects/MEDA_Approval__c/fields/X2nd_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Flight_No__c</fullName>
    <label>2nd Flight No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>