force-app/main/default/objects/MEDA_Approval__c/fields/X3rd_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Flight_Date__c</fullName>
    <label>3rd Flight Date</label>
    <type>Date</type>
</CustomField>