force-app/main/default/objects/MEDA_Approval__c/fields/X3rd_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Flight_No__c</fullName>
    <label>3rd Flight No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>