force-app/main/default/objects/MEDA_Approval__c/fields/X4th_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>X4th_Flight_Date__c</fullName>
    <label>4th Flight Date</label>
    <type>Date</type>
</CustomField>