force-app/main/default/objects/MEDA_Approval__c/fields/X4th_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>X4th_Flight_No__c</fullName>
    <label>4th Flight No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>