force-app/main/default/objects/MEDA_Approval__c/validationRules/Case_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Record_Type</fullName>
    <active>false</active>
    <description>MEDA Approval can only be created under a Case with Record Type &apos;Reservation and Ticketing&apos;.</description>
    <errorConditionFormula>Case__r.RecordType.Name &lt;&gt; &quot;Reservation and Ticketing&quot;</errorConditionFormula>
    <errorMessage>MEDA Approval can only be created under a Case with Record Type &apos;Reservation and Ticketing&apos;.</errorMessage>
</ValidationRule>