force-app/main/default/objects/MEDA_Approval__c/validationRules/CED_Closed_Meda_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>CED_Closed_Meda_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Closed&quot;),
    $UserRole.Name &lt;&gt; &quot;System Administrator&quot;,
    OR(
        /* 不是 CC 也不是 B2B */
        AND(
            NOT(CONTAINS($UserRole.Name, &quot;CC&quot;)),
            NOT(CONTAINS($UserRole.Name, &quot;B2B&quot;))
        ),
        /* CC 沒填 CED_Note__c */
        AND(
            CONTAINS($UserRole.Name, &quot;CC&quot;),
            ISBLANK(CED_Note__c)
        ),
        /* B2B 沒填 PSP_Note__c */
        AND(
            CONTAINS($UserRole.Name, &quot;B2B&quot;),
            ISBLANK(PSP_Note__c)
        )
    )
)</errorConditionFormula>
    <errorMessage>If you want to close the case, please fill in the required Note field.  
若您要關閉案件，請填寫CED Note 或 PSP Note欄位。               
 // 
Only CED or PSP users are allowed to close the case.  
僅CED或PSP可關閉案件。</errorMessage>
</ValidationRule>