force-app/main/default/objects/MEDA_Approval__c/validationRules/Condition_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Condition_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Approval_Status__c, &quot;Conditionally Approved&quot;),
    ISBLANK(TEXT(Condition__c))
)</errorConditionFormula>
    <errorDisplayField>Condition__c</errorDisplayField>
    <errorMessage>Condition is required when Approval Status is set to &apos;Conditionally Approved&apos;.</errorMessage>
</ValidationRule>