force-app/main/default/objects/MEDA_Approval__c/validationRules/RMS_Noted_Required_PSP.validationRule-meta.xml
<ValidationRule>
    <fullName>RMS_Noted_Required_PSP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Replied&quot;),
  Case__r.Case_Record_Type__c = &quot;Group Booking&quot;,
  ISBLANK(RMS_Note_For_PSP__c)
)</errorConditionFormula>
    <errorDisplayField>RMS_Note_For_PSP__c</errorDisplayField>
    <errorMessage>RMS Note is required when Status is set to Replied.</errorMessage>
</ValidationRule>